# advent-of-code

./: .flake8  .gitignore  .justfile  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml  pytest.ini
day01/: solution1.py  solution2.py  test_solution1.py  test_solution2.py
python/: .flake8  .justfile  pyproject.toml
python/day01/: README.md  draft.py  parse_sum.py  parser.py  solution1.py  solution2.py
python/day01/tests/: test_parser.py  test_solution1.py  test_solution2.py
python/day02/: README.md  solution2.py
python/day02/tests/: test_solution1.py  test_solution2.py
python/day03/: solution1.py  solution2.py  values_dict.py
python/day04/: solution1.py  solution2.py
python/day04/tests/: test_parser.py  test_solution1.py  test_solution2.py
python/day05/: README.md  parser.py  solution1.py  solution2.py
python/day05/tests/: test_parser.py  test_solution1.py  test_solution2.py
python/day06/: marker_finder.py
python/day06/tests/: test_marker_finder.py  test_solution1.py  test_solution2.py
python/day07/: solution1.py  solution2.py
python/day07/tests/: test_solution1.py  test_solution2.py
python/day08/: README.md  solution1.py  solution2.py
python/day08/tests/: test_solution1.py  test_solution2.py
python/day09/tests/: test_solution1.py
python/day10/: README.md  solution1.py
python/day10/tests/: test_solution1.py
python/day11/: solution1.py
python/day11/inputs/: test_monkey_file.txt
python/day11/tests/: test_solution1.py
python/shared/: __init__.py  input.py  solve.py
python/shared/tests/: test_solve.py
(+58 files in other folders)
