[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "advent of code exercise repo."
authors = ["Alexander Grant <alexanderxgrant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {version = "^22.3.0", allow-prereleases = true}
cfn-lint = "^0.56.2"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-print = "^4.0"
isort = "^5.9.1"
pre-commit = "^2.12.1"
pytest-cov = "^2.12.0"
pytest-env = "^0.6.2"
pytest-pythonpath = "^0.7.3"
safety = "^1.10.3"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
/(
    \.git
  | \.history
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["day*", "shared"]
